--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="md:w-1/2 flex justify-center z-10 relative">
                 <div class="relative w-80 h-80 md:w-96 md:h-96">
                     <div class="absolute inset-0 bg-odoo-secondary opacity-20 rounded-full blur-2xl transform translate-x-4 translate-y-4"></div>
-                    <img src="logica-cero.png" alt="Andrés Castillo - Odoo Developer" class="w-full h-full object-cover rounded-full border-4 border-white shadow-2xl relative z-10 custom-profile-img">
+                    <img src="assets/img/logica-cero.png" alt="Andrés Castillo - Odoo Developer" class="w-full h-full object-cover rounded-full border-4 border-white shadow-2xl relative z-10 custom-profile-img">
                 </div>
             </div>
         </div>
