--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lógica Cero | Odoo Development Solutions</title>
+    <title>Lógica Cero | Soluciones de Desarrollo Odoo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -32,12 +32,12 @@
                     <span class="font-bold text-2xl text-odoo-primary">Lógica Cero</span>
                 </div>
                 <div class="hidden md:flex space-x-8">
-                    <a href="#about" class="text-gray-600 hover:text-odoo-primary transition">About</a>
-                    <a href="#services" class="text-gray-600 hover:text-odoo-primary transition">Services</a>
-                    <a href="#stack" class="text-gray-600 hover:text-odoo-primary transition">Tech Stack</a>
+                    <a href="#about" class="text-gray-600 hover:text-odoo-primary transition">Sobre mí</a>
+                    <a href="#services" class="text-gray-600 hover:text-odoo-primary transition">Servicios</a>
+                    <a href="#stack" class="text-gray-600 hover:text-odoo-primary transition">Tecnologías</a>
                 </div>
                 <div>
-                    <a href="#contact" class="bg-odoo-secondary text-white px-5 py-2 rounded-md hover:bg-teal-700 transition">Contact Me</a>
+                    <a href="#contact" class="bg-odoo-secondary text-white px-5 py-2 rounded-md hover:bg-teal-700 transition">Contáctame</a>
                 </div>
             </div>
         </div>
@@ -47,21 +47,21 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-1/2 mt-10 md:mt-0 z-10">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-6">
-                    Scalable Odoo Solutions <br>
-                    <span class="text-odoo-secondary">For Complex Logic</span>
+                    Soluciones Odoo Escalables <br>
+                    <span class="text-odoo-secondary">Para Lógica Compleja</span>
                 </h1>
                 <p class="text-lg text-gray-300 mb-8 max-w-lg">
-                    I am <strong>Andrés Castillo</strong>, Founder & Lead Developer. I transform business requirements into efficient, high-performance Odoo ecosystems using Python and OWL.
+                    Soy <strong>Andrés Castillo</strong>, Fundador y Desarrollador Principal. Transformo requerimientos de negocio en ecosistemas Odoo eficientes y de alto rendimiento usando Python y OWL.
                 </p>
                 <div class="flex space-x-4">
-                    <a href="#contact" class="bg-odoo-secondary text-white px-8 py-3 rounded-lg font-semibold hover:bg-teal-600 transition shadow-lg">Start Project</a>
-                    <a href="#stack" class="border border-white text-white px-8 py-3 rounded-lg font-semibold hover:bg-white hover:text-gray-900 transition">View Stack</a>
+                    <a href="#contact" class="bg-odoo-secondary text-white px-8 py-3 rounded-lg font-semibold hover:bg-teal-600 transition shadow-lg">Iniciar Proyecto</a>
+                    <a href="#stack" class="border border-white text-white px-8 py-3 rounded-lg font-semibold hover:bg-white hover:text-gray-900 transition">Ver Tecnologías</a>
                 </div>
             </div>
             <div class="md:w-1/2 flex justify-center z-10 relative">
                 <div class="relative w-80 h-80 md:w-96 md:h-96">
                     <div class="absolute inset-0 bg-odoo-secondary opacity-20 rounded-full blur-2xl transform translate-x-4 translate-y-4"></div>
-                    <img src="assets/img/logica-cero.png" alt="Andrés Castillo - Odoo Developer" class="w-full h-full object-cover rounded-full border-4 border-white shadow-2xl relative z-10 custom-profile-img">
+                    <img src="assets/img/logica-cero.png" alt="Andrés Castillo - Desarrollador Odoo" class="w-full h-full object-cover rounded-full border-4 border-white shadow-2xl relative z-10 custom-profile-img">
                 </div>
             </div>
         </div>
@@ -69,26 +69,26 @@
 
     <section id="about" class="py-20 bg-white">
         <div class="max-w-4xl mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold text-gray-900 mb-4">Behind the Code</h2>
+            <h2 class="text-3xl font-bold text-gray-900 mb-4">Detrás del Código</h2>
             <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-8"></div>
             <p class="text-xl text-gray-600 leading-relaxed mb-10">
-                Specializing in <strong>Odoo v16, v17, and v18</strong>, I focus on backend architecture and frontend responsiveness. My approach at Lógica Cero is simple: clean code, modular design, and robust integrations.
+                Especializado en <strong>Odoo v16, v17 y v18</strong>, me enfoco en la arquitectura backend y la responsividad frontend. Mi enfoque en Lógica Cero es simple: código limpio, diseño modular e integraciones robustas.
             </p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-6 bg-gray-50 rounded-xl">
                     <i class="fa-solid fa-code text-4xl text-odoo-primary mb-4"></i>
-                    <h3 class="font-bold text-lg">Custom Modules</h3>
-                    <p class="text-gray-500 text-sm">Tailored Python/XML Logic</p>
+                    <h3 class="font-bold text-lg">Módulos a Medida</h3>
+                    <p class="text-gray-500 text-sm">Lógica Python/XML a la medida</p>
                 </div>
                 <div class="p-6 bg-gray-50 rounded-xl">
                     <i class="fa-solid fa-server text-4xl text-odoo-primary mb-4"></i>
-                    <h3 class="font-bold text-lg">Integrations</h3>
-                    <p class="text-gray-500 text-sm">REST API & External Hardware</p>
+                    <h3 class="font-bold text-lg">Integraciones</h3>
+                    <p class="text-gray-500 text-sm">API REST y Hardware Externo</p>
                 </div>
                 <div class="p-6 bg-gray-50 rounded-xl">
                     <i class="fa-solid fa-rocket text-4xl text-odoo-primary mb-4"></i>
-                    <h3 class="font-bold text-lg">Performance</h3>
-                    <p class="text-gray-500 text-sm">Optimized Query & Caching</p>
+                    <h3 class="font-bold text-lg">Rendimiento</h3>
+                    <p class="text-gray-500 text-sm">Consultas y Caché Optimizados</p>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
         <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
             <div class="mb-6 md:mb-0">
                 <span class="text-2xl font-bold text-white">Lógica Cero</span>
-                <p class="text-gray-400 mt-2">Empowering businesses with Odoo.</p>
+                <p class="text-gray-400 mt-2">Potenciando negocios con Odoo.</p>
             </div>
             <div class="flex space-x-6">
                 <a href="#" class="text-gray-400 hover:text-white text-2xl"><i class="fab fa-github"></i></a>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <div class="text-center text-gray-500 text-sm mt-8">
-            &copy; 2025 Lógica Cero. All rights reserved.
+            &copy; 2025 Lógica Cero. Todos los derechos reservados.
         </div>
     </footer>
 
