--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
                 <div class="flex-shrink-0 flex items-center">
-                    <span class="font-bold text-2xl text-odoo-primary">Lógica Cero</span>
+                    <img src="assets/img/logologicacero.png" alt="Lógica Cero Logo" class="h-10 w-auto">
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="#about" class="text-gray-600 hover:text-odoo-primary transition">Sobre mí</a>
