--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="hidden md:flex space-x-8">
                     <a href="#about" class="text-gray-600 hover:text-odoo-primary transition">Sobre mí</a>
                     <a href="#services" class="text-gray-600 hover:text-odoo-primary transition">Servicios</a>
+                    <a href="#portfolio" class="text-gray-600 hover:text-odoo-primary transition">Portafolio</a>
                     <a href="#stack" class="text-gray-600 hover:text-odoo-primary transition">Tecnologías</a>
                 </div>
                 <div>
@@ -46,10 +47,14 @@
     <section class="pt-32 pb-20 bg-gradient-to-br from-gray-900 to-odoo-primary text-white relative overflow-hidden">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-1/2 mt-10 md:mt-0 z-10">
-                <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-6">
+                <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">
                     Soluciones Odoo Escalables <br>
                     <span class="text-odoo-secondary">Para Lógica Compleja</span>
                 </h1>
+                <div class="text-lg italic text-gray-300 mb-6">
+                    <p>"Lo que puedan imaginar, lo podemos crear."</p>
+                    <p>"Hecho con lógica, cero complicaciones."</p>
+                </div>
                 <p class="text-lg text-gray-300 mb-8 max-w-lg">
                     Soy <strong>Andrés Castillo</strong>, Fundador y Desarrollador Principal. Transformo requerimientos de negocio en ecosistemas Odoo eficientes y de alto rendimiento usando Python y OWL.
                 </p>
@@ -90,6 +95,37 @@
                     <h3 class="font-bold text-lg">Rendimiento</h3>
                     <p class="text-gray-500 text-sm">Consultas y Caché Optimizados</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="portfolio" class="py-20 bg-gray-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <h2 class="text-3xl font-bold text-gray-900 mb-4">Portafolio de Módulos Desarrollados</h2>
+            <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-12"></div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+                <!-- Módulo 1 -->
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-truck-fast text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Trazabilidad Logística Avanzada</h3>
+                    <p class="text-gray-600">Módulo para el seguimiento de flotas y mercancía en tiempo real, integrando hardware GPS y generando reportes de eficiencia de rutas para optimizar entregas y reducir costos.</p>
+                </div>
+                <!-- Módulo 2 -->
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-file-invoice-dollar text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Conciliación Bancaria Automática</h3>
+                    <p class="text-gray-600">Conector que automatiza la importación de estados de cuenta y realiza la conciliación de pagos y facturas, reduciendo el trabajo manual del equipo contable en un 90%.</p>
+                </div>
+                <!-- Módulo 3 -->
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-store text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Sincronizador Multi-Marketplace</h3>
+                    <p class="text-gray-600">Integra Odoo con MercadoLibre, Amazon y Shopify para centralizar inventario, pedidos y precios, evitando quiebres de stock y gestionando todo desde una única plataforma.</p>
+                </div>
+            </div>
+            <div class="mt-12 bg-white border-l-4 border-odoo-secondary p-6 text-left max-w-4xl mx-auto rounded-r-lg shadow">
+                <h4 class="font-bold text-lg text-gray-800">Nota sobre nuestros módulos</h4>
+                <p class="text-gray-600 mt-2">Todos nuestros módulos son hechos a la medida para resolver necesidades específicas. Si requieres una solución similar, esta será adaptada y personalizada para tu empresa, incluyendo cambios de nombre, logo, flujos de trabajo y cualquier otra idea que tengas para potenciar tu operación.</p>
             </div>
         </div>
     </section>
