--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <h2 class="text-3xl font-bold text-gray-900 mb-4">Detrás del Código</h2>
             <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-8"></div>
             <p class="text-xl text-gray-600 leading-relaxed mb-10">
-                Especializado en <strong>Odoo v16, v17 y v18</strong>, me enfoco en la arquitectura backend y la responsividad frontend. Mi enfoque en Lógica Cero es simple: código limpio, diseño modular e integraciones robustas.
+                Soy Andrés Castillo y dirijo un equipo de desarrolladores senior, todos Ingenieros en Informática. Con <strong>3 años de experiencia en el ecosistema Odoo (v16-v18)</strong>, conocemos a fondo sus debilidades, fortalezas, limitaciones y bondades. Nuestro enfoque en Lógica Cero es simple: código limpio, diseño modular e integraciones robustas para optimizar sus flujos funcionales y técnicos.
             </p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-6 bg-gray-50 rounded-xl">
