--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
         </div>
     </section>
 
+    <section id="commitment" class="py-20 bg-odoo-dark text-white">
+        <div class="max-w-4xl mx-auto px-4 text-center">
+            <h2 class="text-3xl font-bold mb-4">Nuestro Compromiso: Disponibilidad Total</h2>
+            <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-8"></div>
+            <p class="text-xl text-gray-300 leading-relaxed">
+                Entendemos que los proyectos críticos no tienen horario. En Lógica Cero, un programador no solo cumple horas, sino que entrega resultados. Nuestro equipo está comprometido a trabajar con la dedicación necesaria para cumplir los plazos y garantizar que su operación nunca se detenga. <strong>Estamos disponibles 24/7 hasta entregar lo prometido.</strong>
+            </p>
+        </div>
+    </section>
+
     <section id="portfolio" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl font-bold text-gray-900 mb-4">Portafolio de Módulos Desarrollados</h2>
