--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                 <!-- Módulo 1 -->
                 <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
                     <i class="fa-solid fa-truck-fast text-4xl text-odoo-primary mb-4"></i>
-                    <h3 class="font-bold text-xl mb-2">Trazabilidad Logística Avanzada</h3>
-                    <p class="text-gray-600">Módulo para el seguimiento de flotas y mercancía en tiempo real, integrando hardware GPS y generando reportes de eficiencia de rutas para optimizar entregas y reducir costos.</p>
+                    <h3 class="font-bold text-xl mb-2">Truckflow</h3>
+                    <p class="text-gray-600">Módulo para gestion de transporte, que integra el uso de flotas y facturación en tiempo real, integrando hardware GPS y generando reportes de eficiencia de rutas para optimizar entregas y reducir costos.</p>
                 </div>
                 <!-- Módulo 2 -->
                 <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
@@ -128,15 +128,71 @@
                 </div>
                 <!-- Módulo 3 -->
                 <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
-                    <i class="fa-solid fa-store text-4xl text-odoo-primary mb-4"></i>
-                    <h3 class="font-bold text-xl mb-2">Sincronizador Multi-Marketplace</h3>
-                    <p class="text-gray-600">Integra Odoo con MercadoLibre, Amazon y Shopify para centralizar inventario, pedidos y precios, evitando quiebres de stock y gestionando todo desde una única plataforma.</p>
+                    <i class="fa-solid fa-network-wired text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Odoo Bridge</h3>
+                    <p class="text-gray-600">Interconecta sistemas Odoo entre versiones para comunicar pedidos de compra y de venta.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-hand-holding-dollar text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Anticipos</h3>
+                    <p class="text-gray-600">Logica personalizada para la gestión de anticipos, registrando las operaciones en una cuenta contable especifica sin afectar el estado de cuentas por cobrar o pagar del contacto.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-landmark text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Localizacion Fiscal Venezolana</h3>
+                    <p class="text-gray-600">Kit de modulos que dan cumplimiento tributario/fiscal a las operaciones dentro del sistema venezolano.(Desarrollado para Odoo 16 y 17)</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-file-pdf text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Reportes Qweb/PDF Personalizados</h3>
+                    <p class="text-gray-600">Desarrollamos reportes personalizados en formatos Qweb y PDF para adaptarse a las necesidades específicas de tu empresa.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-sync text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Integración entre Sistemas Local A2 con Odoo Cloud</h3>
+                    <p class="text-gray-600">Desarrollamos la integración entre sistemas con Spooling Service para sincronizar Ventas/Contactos/Productos desde Odoo a sistemas locales.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-plug text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Endpoint e Integraciones Personalizadas</h3>
+                    <p class="text-gray-600">Somos expertos en desarrollar endpoints y soluciones de integración personalizadas para conectar Odoo con otras plataformas y servicios, adaptándonos a las necesidades específicas de tu negocio.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-cash-register text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Sale Payment Wizard</h3>
+                    <p class="text-gray-600">Registra pagos o anticipos directamente al confirmar una orden de venta. Compatible con doble moneda y conciliación automática. (Creamos soluciones al entorno multimoneda dentro del POS)</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-clipboard-check text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Modulo Auditor</h3>
+                    <p class="text-gray-600">Registro de eventos, errores, desconexiones y auditoría completa para garantizar la integridad y seguridad de tus datos.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-share-nodes text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Share Utility Products</h3>
+                    <p class="text-gray-600">Añade un botón para compartir productos con opciones preconfigurables y selección de multiples tarifas.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-money-check-dollar text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Smart Advance Registration</h3>
+                    <p class="text-gray-600">Registro intuitivo de anticipos (En CXC) y cobros con selección de facturas. Se añade logica personalizada que permite establecer el importe exacto a imputar en varias facturas a partir de un unico pago.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-magnifying-glass-dollar text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Triangulación de Fondos</h3>
+                    <p class="text-gray-600">Módulo que implementa un tablero estilo Kanban para visualizar el valor o costo de las inversiones (Compras) realizadas por la compañia, permite conocer en que estado o etapa del proceso de procura se encuentra el dinero.</p>
+                </div>
+                <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <i class="fa-solid fa-cubes text-4xl text-odoo-primary mb-4"></i>
+                    <h3 class="font-bold text-xl mb-2">Otros Módulos</h3>
+                    <p class="text-gray-600">Hemos desarrollado un sinfin de soluciones especificas que afectan diversas áreas de negocio y procesos operativos.</p>
                 </div>
             </div>
             <div class="mt-12 bg-white border-l-4 border-odoo-secondary p-6 text-left max-w-4xl mx-auto rounded-r-lg shadow">
                 <h4 class="font-bold text-lg text-gray-800">Nota sobre nuestros módulos</h4>
                 <p class="text-gray-600 mt-2">Todos nuestros módulos son hechos a la medida para resolver necesidades específicas. Si requieres una solución similar, esta será adaptada y personalizada para tu empresa, incluyendo cambios de nombre, logo, flujos de trabajo y cualquier otra idea que tengas para potenciar tu operación.</p>
             </div>
+            
         </div>
     </section>
 
