--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
             }
         }
     </script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'es', includedLanguages: 'en,es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <style>
+        .goog-te-gadget-simple {
+            background-color: transparent !important;
+            border: none !important;
+            padding: 0 !important;
+        }
+        .goog-te-gadget-simple img {
+            display: none !important;
+        }
+    </style>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
 
@@ -37,7 +53,8 @@
                     <a href="#portfolio" class="text-gray-600 hover:text-odoo-primary transition">Portafolio</a>
                     <a href="#stack" class="text-gray-600 hover:text-odoo-primary transition">Tecnologías</a>
                 </div>
-                <div>
+                <div class="flex items-center space-x-4">
+                    <div id="google_translate_element"></div>
                     <a href="#contact" class="bg-odoo-secondary text-white px-5 py-2 rounded-md hover:bg-teal-700 transition">Contáctame</a>
                 </div>
             </div>
