--- a/index.html
+++ b/index.html
@@ -126,6 +126,27 @@
         </div>
     </section>
 
+    <section class="py-12 bg-white border-b border-gray-200">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <p class="text-lg font-semibold text-gray-500 uppercase tracking-wider mb-8">Empresas que confían en nosotros</p>
+            <div class="flex justify-center items-center gap-8 flex-wrap">
+                <!-- Cliente: Agromatic -->
+                <div class="group p-4 transition duration-300">
+                    <!-- Nota: Asegúrate de colocar el logo en assets/img/clients/agromatic.png o ajusta la ruta -->
+                    <img src="assets/img/agromatic.png" alt="Agromatic" class="h-24 w-48 object-contain grayscale opacity-60 group-hover:grayscale-0 group-hover:opacity-100 transition duration-300" title="Agromatic">
+                </div>
+                <div class="group p-4 transition duration-300">
+                    <!-- Nota: Asegúrate de colocar el logo en assets/img/clients/agromatic.png o ajusta la ruta -->
+                    <img src="assets/img/contables.png" alt="Contables" class="h-24 w-48 object-contain grayscale opacity-60 group-hover:grayscale-0 group-hover:opacity-100 transition duration-300" title="Contables">
+                </div>
+                <div class="group p-4 transition duration-300">
+                    <!-- Nota: Asegúrate de colocar el logo en assets/img/clients/agromatic.png o ajusta la ruta -->
+                    <img src="assets/img/ledcom.png" alt="Ledcom" class="h-24 w-48 object-contain grayscale opacity-60 group-hover:grayscale-0 group-hover:opacity-100 transition duration-300" title="Ledcom">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="portfolio" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl font-bold text-gray-900 mb-4">Portafolio de Módulos Desarrollados</h2>
