--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lógica Cero | Soluciones de Desarrollo Odoo</title>
+    <title>Andrés Castillo | Consultor Técnico Odoo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -65,11 +65,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col-reverse md:flex-row items-center">
             <div class="md:w-1/2 mt-10 md:mt-0 z-10">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">
-                    Soluciones Odoo Escalables <br>
-                    <span class="text-odoo-secondary">Para Lógica Compleja</span>
+                    Desarrollador Odoo Senior <br>
+                    <span class="text-odoo-secondary">& Consultor Técnico</span>
                 </h1>
                 <p class="text-lg text-gray-300 mb-8 max-w-lg">
-                    Soy <strong>Andrés Castillo</strong>, Fundador y Desarrollador Principal. Transformo requerimientos de negocio en ecosistemas Odoo eficientes y de alto rendimiento usando Python y OWL.
+                    Soy <strong>Andrés Castillo</strong>, Consultor Técnico Senior. Transformo requerimientos de negocio en ecosistemas Odoo eficientes y de alto rendimiento usando Python y OWL.
                 </p>
                 <div class="text-lg italic text-gray-300 mb-6">
                     <p>"Lo que puedan imaginar, lo podemos crear."</p>
@@ -91,10 +91,10 @@
 
     <section id="about" class="py-20 bg-white">
         <div class="max-w-4xl mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold text-gray-900 mb-4">Detrás del Código</h2>
+            <h2 class="text-3xl font-bold text-gray-900 mb-4">Sobre Mí</h2>
             <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-8"></div>
             <p class="text-xl text-gray-600 leading-relaxed mb-10">
-                Dirijo un equipo de desarrolladores senior, todos Ingenieros en Informática. Con <strong>3 años de experiencia en el ecosistema Odoo (v14-v18)</strong>, conocemos a fondo sus debilidades, fortalezas, limitaciones y bondades. Nuestro enfoque en Lógica Cero es simple: código limpio, diseño modular e integraciones robustas para optimizar sus flujos funcionales y técnicos.
+                Ingeniero en Informática con <strong>3 años de experiencia en el ecosistema Odoo (v14-v18)</strong>. Conozco a fondo sus debilidades, fortalezas, limitaciones y bondades. Mi enfoque es simple: código limpio, diseño modular e integraciones robustas para optimizar flujos funcionales y técnicos.
             </p>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div class="p-6 bg-gray-50 rounded-xl">
@@ -118,17 +118,17 @@
 
     <section id="commitment" class="py-20 bg-odoo-dark text-white">
         <div class="max-w-4xl mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-4">Nuestro Compromiso: Disponibilidad Total</h2>
+            <h2 class="text-3xl font-bold mb-4">Mi Compromiso: Resultados</h2>
             <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-8"></div>
             <p class="text-xl text-gray-300 leading-relaxed">
-                Entendemos que los proyectos críticos no tienen horario. En Lógica Cero, un programador no solo cumple horas, sino que entrega resultados. Nuestro equipo está comprometido a trabajar con la dedicación necesaria para cumplir los plazos y garantizar que su operación nunca se detenga. <strong>Estamos disponibles 24/7 hasta entregar lo prometido.</strong>
+                Entiendo que los proyectos críticos requieren atención. No solo cumplo horas, sino que entrego resultados. Estoy comprometido a trabajar con la dedicación necesaria para cumplir los plazos y garantizar que su operación nunca se detenga. <strong>Enfocado en la entrega y la calidad.</strong>
             </p>
         </div>
     </section>
 
     <section class="py-12 bg-white border-b border-gray-200">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p class="text-lg font-semibold text-gray-500 uppercase tracking-wider mb-8">Empresas que confían en nosotros</p>
+            <p class="text-lg font-semibold text-gray-500 uppercase tracking-wider mb-8">Empresas que confían en mi</p>
             <div class="flex justify-center items-center gap-8 flex-wrap">
                 <!-- Cliente: Agromatic -->
                 <div class="group p-4 transition duration-300">
@@ -147,6 +147,33 @@
         </div>
     </section>
 
+    <section id="experience" class="py-20 bg-white">
+        <div class="max-w-4xl mx-auto px-4">
+            <h2 class="text-3xl font-bold text-gray-900 mb-4 text-center">Experiencia Profesional</h2>
+            <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-12"></div>
+            
+            <div class="space-y-12">
+                <!-- Lógica Cero -->
+                <div class="relative pl-8 border-l-4 border-odoo-primary">
+                    <h3 class="text-2xl font-bold text-gray-800">Consultor Técnico Senior Odoo</h3>
+                    <p class="text-odoo-secondary font-semibold">Lógica Cero (Proyectos Independientes) | Nov 2025 - Presente</p>
+                    <p class="mt-4 text-gray-600">
+                        Desarrollo de soluciones a medida, integraciones complejas y optimización de rendimiento.
+                    </p>
+                </div>
+
+                <!-- Airtek -->
+                <div class="relative pl-8 border-l-4 border-gray-300">
+                    <h3 class="text-2xl font-bold text-gray-800"> Odoo Technical Lead (Líder de Proyecto),</h3>
+                    <p class="text-odoo-secondary font-semibold">Contables Boyer León & Asociados | 2023 - Presente</p>
+                    <p class="mt-4 text-gray-600">
+                        Conciliación automática de +10,000 transacciones diarias, optimizando el flujo financiero y reduciendo errores operativos.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="portfolio" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h2 class="text-3xl font-bold text-gray-900 mb-4">Portafolio de Módulos Desarrollados</h2>
@@ -156,13 +183,13 @@
                 <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
                     <i class="fa-solid fa-truck-fast text-4xl text-odoo-primary mb-4"></i>
                     <h3 class="font-bold text-xl mb-2">Truckflow</h3>
-                    <p class="text-gray-600">Módulo para gestion de transporte, que integra el uso de flotas y facturación en tiempo real, integrando hardware GPS y generando reportes de eficiencia de rutas para optimizar entregas y reducir costos.</p>
+                    <p class="text-gray-600">Módulo para gestión de transporte que integra flotas y facturación en tiempo real. Reducción del 40% en tiempos de procesamiento de órdenes mediante scripts de optimización y reportes de eficiencia de rutas.</p>
                 </div>
                 <!-- Módulo 2 -->
                 <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
                     <i class="fa-solid fa-file-invoice-dollar text-4xl text-odoo-primary mb-4"></i>
                     <h3 class="font-bold text-xl mb-2">Conciliación Bancaria Automática</h3>
-                    <p class="text-gray-600">Conector que automatiza la importación de estados de cuenta y realiza la conciliación de pagos y facturas, reduciendo el trabajo manual del equipo contable en un 90%.</p>
+                    <p class="text-gray-600">Conector que automatiza la importación de estados de cuenta y realiza la conciliación de pagos y facturas. Conciliación automática de +10,000 transacciones diarias, reduciendo el trabajo manual del equipo contable en un 90%.</p>
                 </div>
                 <!-- Módulo 3 -->
                 <div class="bg-white p-8 rounded-xl shadow-md hover:shadow-xl transition-shadow duration-300">
@@ -227,18 +254,59 @@
                 </div>
             </div>
             <div class="mt-12 bg-white border-l-4 border-odoo-secondary p-6 text-left max-w-4xl mx-auto rounded-r-lg shadow">
-                <h4 class="font-bold text-lg text-gray-800">Nota sobre nuestros módulos</h4>
-                <p class="text-gray-600 mt-2">Todos nuestros módulos son hechos a la medida para resolver necesidades específicas. Si requieres una solución similar, esta será adaptada y personalizada para tu empresa, incluyendo cambios de nombre, logo, flujos de trabajo y cualquier otra idea que tengas para potenciar tu operación.</p>
+                <h4 class="font-bold text-lg text-gray-800">Nota sobre mis desarrollos</h4>
+                <p class="text-gray-600 mt-2">Todos los módulos son hechos a la medida para resolver necesidades específicas. Si requieres una solución similar, esta será adaptada y personalizada para tu empresa.</p>
             </div>
             
+        </div>
+    </section>
+
+    <section id="stack" class="py-20 bg-white">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <h2 class="text-3xl font-bold text-gray-900 mb-4">Stack Tecnológico</h2>
+            <div class="w-16 h-1 bg-odoo-secondary mx-auto mb-12"></div>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+                <div class="p-4">
+                    <i class="fab fa-python text-5xl text-odoo-primary mb-2"></i>
+                    <h3 class="font-bold">Python</h3>
+                </div>
+                <div class="p-4">
+                    <i class="fas fa-server text-5xl text-odoo-secondary mb-2"></i>
+                    <h3 class="font-bold">Odoo.sh</h3>
+                </div>
+                <div class="p-4">
+                    <i class="fab fa-docker text-5xl text-blue-500 mb-2"></i>
+                    <h3 class="font-bold">Docker</h3>
+                </div>
+                <div class="p-4">
+                    <i class="fab fa-js text-5xl text-yellow-400 mb-2"></i>
+                    <h3 class="font-bold">JavaScript / OWL</h3>
+                </div>
+                <div class="p-4">
+                    <i class="fas fa-database text-5xl text-gray-600 mb-2"></i>
+                    <h3 class="font-bold">PostgreSQL</h3>
+                </div>
+                <div class="p-4">
+                    <i class="fab fa-linux text-5xl text-black mb-2"></i>
+                    <h3 class="font-bold">Linux</h3>
+                </div>
+                <div class="p-4">
+                    <i class="fab fa-git-alt text-5xl text-red-500 mb-2"></i>
+                    <h3 class="font-bold">Git</h3>
+                </div>
+                <div class="p-4">
+                    <i class="fas fa-cloud text-5xl text-blue-300 mb-2"></i>
+                    <h3 class="font-bold">API REST</h3>
+                </div>
+            </div>
         </div>
     </section>
 
     <footer class="bg-gray-900 text-white py-12 border-t border-gray-800" id="contact">
         <div class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
             <div class="mb-6 md:mb-0">
-                <span class="text-2xl font-bold text-white">Lógica Cero</span>
-                <p class="text-gray-400 mt-2">Potenciando negocios con Odoo.</p>
+                <span class="text-2xl font-bold text-white">Andrés Castillo</span>
+                <p class="text-gray-400 mt-2">Desarrollador Odoo Senior.</p>
             </div>
             <div class="flex space-x-6">
                 <a href="#" class="text-gray-400 hover:text-white text-2xl"><i class="fab fa-github"></i></a>
@@ -247,7 +315,7 @@
             </div>
         </div>
         <div class="text-center text-gray-500 text-sm mt-8">
-            &copy; 2025 Lógica Cero. Todos los derechos reservados.
+            &copy; 2025 Andrés Castillo. Todos los derechos reservados.
         </div>
     </footer>
 
